tests/bad/return-type-doesnot-match2.c
float main()
{
    char c = 'f';
    return 0;
}
